# pylon

./: .gitignore  .onedev-buildspec.yml  Cargo.toml  LICENSE-MIT  README.md  justfile  notes.md
cms/: Cargo.toml
cms/src/: main.rs
cmslib/: Cargo.toml
cmslib/src/: cmslib.rs  discover.rs  engine.rs  frontmatter.rs  gctx.rs  page.rs  pagestore.rs  pipeline.rs  script_old.rs  serve.rs  site_context.rs  util.rs
cmslib/src/core/: broker.rs  config.rs  engine.rs  linked_asset.rs  mod.rs  page.rs  pagestore.rs  relsystempath.rs  rules.rs  script_engine.rs  uri.rs
cmslib/src/core/page/: frontmatter.rs  lint.rs  mod.rs  page.rs  render.rs
cmslib/src/core/rules/: fn_pointers.rs  gctx.rs  matcher.rs  mod.rs  rules.rs  script.rs
cmslib/src/devserver/: broker.rs  fswatcher.rs  live-reload.js  livereload.rs  mod.rs  responders.rs  staticfiles.rs  toast.css
cmslib/src/engine/: broker.rs  config.rs  engine.rs  mod.rs
cmslib/src/render/: mod.rs  page.rs  rendered_page.rs
cmslib/src/render/markup/: markdown.rs  mod.rs
cmslib/src/render/template/: mod.rs  tera.rs
cmslib/test/engine/content/: asset.txt  index.md
cmslib/test/engine/templates/: single_asset.tera
cmslib/test/templates/sample/: page.tera
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/pathmarker/: Cargo.toml
crates/pathmarker/src/: lib.rs
crates/pindexer/: Cargo.toml
crates/pindexer/src/: index.rs  lib.rs
crates/pindexer/src/test/: index_display.expected  index_display_with_list.expected  index_serialize_format.expected
crates/pipeworks/: Cargo.toml
crates/pipeworks/src/: lib.rs
crates/pyloncore/: Cargo.toml
crates/pyloncore/src/core/: engine.rs
crates/pyloncore/src/render/template/: tera.rs
crates/searchconnector/: Cargo.toml
crates/searchconnector/src/: lib.rs
crates/searchconnector/src/provider/: meilisearch.rs  mod.rs
crates/searchdoc/: Cargo.toml
crates/searchdoc/src/: collection.rs  lib.rs
crates/shortcode_processor/: Cargo.toml
crates/shortcode_processor/src/: lib.rs
crates/typed_path/: Cargo.toml
crates/typed_path/src/: absolute.rs  checked.rs  lib.rs  marker.rs  relative.rs  syspath.rs  unchecked.rs
crates/typed_path/src/checked/: dirpath.rs  filepath.rs  pathmarker.rs
crates/typed_path/src/unchecked/: absolute.rs  relative.rs  syspath.rs
crates/typed_uri/: Cargo.toml
crates/typed_uri/src/: lib.rs  uri.rs
pipeworks/: Cargo.toml
pipeworks/src/: main.rs
pipeworks/src/lib/: cmslib.rs  cmspath.rs  discover.rs  pipeline.rs  pipeworks.rs
pipeworks/src/lib/render/: html.rs  markdown.rs  mod.rs
pylon/: Cargo.toml
pylon/src/: lib.rs  path.rs  pipeline.rs  util.rs
pylon/src/core/: config.rs  engine.rs  linked_asset.rs  mod.rs  pagestore.rs  relsystempath.rs  script_engine.rs  syspath.rs  uri.rs
pylon/src/core/page/: frontmatter.rs  lint.rs  mod.rs  page.rs  render.rs
pylon/src/core/rules/: fn_pointers.rs  matcher.rs  mod.rs
pylon/src/devserver/: broker.rs  fswatcher.rs  mod.rs  responders.rs
pylon/src/discover/: css_asset.rs  html_asset.rs  mod.rs
pylon/src/path/: asset.rs  mod.rs  uri.rs
pylon/src/path/checked/: dirpath.rs  filepath.rs  mod.rs  pathmarker.rs
pylon/src/path/unchecked/: absolute.rs  relative.rs  syspath.rs
pylon/src/render/: mod.rs
pylon/src/render/highlight/: mod.rs  syntect_highlighter.rs
pylon/src/render/highlight/test/: material-dark.tmTheme
pylon/src/render/markup/: markdown.rs
pylon/src/render/template/: tera.rs
pylonbin/: Cargo.toml
pylonlib/: Cargo.toml
pylonlib/src/: core.rs  devserver.rs  discover.rs  init.rs  lib.rs  pipeline.rs  postprocess.rs  render.rs  util.rs
pylonlib/src/core/: engine.rs  library.rs  mod.rs  page.rs  pagestore.rs  rules.rs  script_engine.rs  syspath.rs
pylonlib/src/core/engine/: step.rs
pylonlib/src/core/page/: frontmatter.rs  lint.rs  mod.rs  page.rs  render.rs  search.rs  util.rs
pylonlib/src/core/page/render/: breadcrumbs.rs
pylonlib/src/core/rules/: fn_pointers.rs  matcher.rs  mod.rs
pylonlib/src/devserver/: broker.rs  error.html  fswatcher.rs  live-reload.js  livereload.rs  responders.rs  toast.css
pylonlib/src/discover/: asset.rs  css_asset.rs  html_asset.rs  mod.rs  shortcode.rs
pylonlib/src/init-resource/: site-rules.rhai
pylonlib/src/init-resource/content/: index.md
pylonlib/src/init-resource/web/templates/: index.tera
pylonlib/src/init-resource/web/templates/content/: default.tera
pylonlib/src/init-resource/web/templates/macros/: text.tera
pylonlib/src/init-resource/web/templates/partials/: head.tera
pylonlib/src/init-resource/web/templates/shortcodes/: big.tera
pylonlib/src/render/: shortcode.rs  template.rs
pylonlib/src/render/highlight/: syntect_highlighter.rs
pylonlib/src/render/markup/: markdown.rs
pylonlib/src/render/markup/test_data/: adds_ids_to_headings_for_toc_anchors.html  dashifies_headers.html  handles_code_fence_with_language_specified.html  no_sup_tag_on_footnote_definitions.html
pylonlib/src/render/template/: mod.rs  tera.rs
pylonlib/src/render/template/tera/functions/: include_cmd.rs  include_file.rs  mod.rs
src/: main.rs
test/: site-rules.rhai
test/src/: index.md  sample.txt  wstest.md
test/src.bak/db/: index.md
test/src.tiny/: index.md
test/src/blog/: index.md
test/src/blog/post1/: altpage.md  index.md
test/src/blog/post2/: index.md  sup.md
test/src/ctxgen/: index.md
test/src/db/: index.md
test/src/db/algo/: bubble_sort.md
test/src/db/struct/array/: index.md
test/src/link/: alt.md  index.md  other.md
test/templates/: index.tera  index_content.tera  page.tera  wstest.tera
test/templates/blog/: page.tera  single.tera
test/templates/ctxgen/: page.tera
test/templates/db/: index.tera  page.tera
test/templates/link/: page.tera
tests/: devserver.rs  site.rs
