[package]
name = "pylon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pylon"

[dependencies]
clap = { version = "3.1", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
tracing-error = "0.2"
eyre = "0.6"
color-eyre = "0.6"
rhai = { version = "1.5", features = ["sync", "metadata", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
futures = "0.3"

pylonlib = { path = "pylonlib" }
typed_path = { path = "crates/typed_path"}

[dev-dependencies]
temptree = "0.2.0"
tempfile = "3.3"
reqwest = { version = "0.11", features = ["blocking"] }
serial_test = "0.6.0"

[workspace]
members = [
    "crates/pathmarker",
    "crates/pipeworks",
    "crates/shortcode_processor",
    "crates/typed_path",
    "crates/typed_uri",
    "pylonlib",
]
