[package]
name = "pylon"
version = "0.2.9"
edition = "2021"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
description = "Static Site Generator"
readme = "README.md"
homepage = "https://github.com/jayson-lennon/pylon"
repository = "https://github.com/jayson-lennon/pylon"
license = "MIT OR Apache-2.0"
keywords = ["generator", "site"]
categories = ["web-programming"]
publish = false

[[bin]]
name = "pylon"

[dependencies]
clap = { version = "3.2", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
tracing-error = "0.2"
eyre = "0.6"
color-eyre = "0.6"
rhai = { version = "1.8", features = ["sync", "metadata", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
futures = "0.3"
dotenv = "0.15"

pylonlib = { path = "pylonlib" }
typed_path = { path = "crates/typed_path"}

[dev-dependencies]
temptree = "0.2.0"
# use `preserve_order` feature to make sure exported JSON has proper values
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.3"
reqwest = { version = "0.11", features = ["blocking"] }
serial_test = "0.8.0"
once_cell = "1.13"

[workspace]
members = [
    "crates/pathmarker",
    "crates/pipeworks",
    "crates/shortcode_processor",
    "crates/typed_path",
    "crates/typed_uri",
    "pylonlib",
]
