[package]
name = "cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
cmslib = { path = "../cmslib" }
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4"
actix-files = "0.6"
anyhow = "1.0"