[package]
name = "cmslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cmslib"
path = "src/cmslib.rs"

[dependencies]
tempfile = "3.3"
regex = "1.5"
scraper = "0.12"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
once_cell = "1.10"
anyhow = { version = "1.0", features = ["std"] }
thiserror = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tera = "1.15"
tracing = "0.1"
slotmap = { version = "1.0", features = ["serde"] }
itertools = "0.10"
serde_json = "1.0"
poem = { version = "1.3", features = ["static-files", "websocket"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
async-trait = "0.1"
percent-encoding = "2.1"
mime = "0.3"