[package]
name = "pipeworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pipeworks"
path = "src/lib/pipeworks.rs"

[dependencies]
tempfile = "3.3.0"
regex = "1.5.5"
scraper = "0.12.0"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
once_cell = "1.10.0"
anyhow = "1.0.56"
thiserror = "1.0.30"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
tera = "1.15.0"
clap = { version = "3.1.6", features = ["derive"] }