[package]
name = "pylonlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed_path = { path = "../crates/typed_path" }
typed_uri = { path = "../crates/typed_uri" }
tempfile = "3.3"
regex = "1.5"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
once_cell = "1.10"
anyhow = { version = "1.0", features = ["std"] }
thiserror = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tera = "1.15"
tracing = "0.1"
slotmap = { version = "1.0", features = ["serde"] }
itertools = "0.10"
serde_json = "1.0"
poem = { version = "1.3", features = ["static-files", "websocket"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
async-trait = "0.1"
percent-encoding = "2.1"
mime = "0.3"
mime_guess = "2.0"
async-channel = "1.6"
hotwatch = "0.4"
async-lock = "2.5"
crossbeam-channel = "0.5"
globset = "0.4"
rhai = { version = "1.5", features = ["sync", "metadata", "serde"] }
parking_lot = "0.12"
fs_extra = "1.2"
scraper = "0.12"
parcel_css = "1.0.0-alpha.23"
syntect = "4.6"
derivative = "2.2"

[dev-dependencies]
temptree = "0.2.0"