[package]
name = "pylonlib"
version = "0.1.0"
edition = "2021"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
description = "Core functionality for Pylon"
homepage = "https://github.com/jayson-lennon/pylon"
repository = "https://github.com/jayson-lennon/pylon"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipeworks = { path = "../crates/pipeworks" }
typed_path = { path = "../crates/typed_path" }
typed_uri = { path = "../crates/typed_uri" }
shortcode_processor = { path = "../crates/shortcode_processor" }
pathmarker = { path = "../crates/pathmarker" }

tempfile = "3.3"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
pulldown-cmark-toc = "0.1"
once_cell = "1.10"
eyre = "0.6"
color-eyre = "0.6"
thiserror = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tera = "1.16"
tracing = "0.1"
tracing-test = "0.2"
slotmap = { version = "1.0", features = ["serde"] }
itertools = "0.10"
serde_json = "1.0"
poem = { version = "1.3", features = ["static-files", "websocket"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
async-trait = "0.1"
percent-encoding = "2.1"
mime = "0.3"
mime_guess = "2.0"
async-channel = "1.6"
hotwatch = "0.4"
async-lock = "2.5"
crossbeam-channel = "0.5"
globset = "0.4"
rhai = { version = "1.5", features = ["sync", "metadata", "serde"] }
parking_lot = "0.12"
fs_extra = "1.2"
scraper = "0.13"
parcel_css = "1.0.0-alpha.25"
syntect = "5"
derivative = "2.2"
ansi-to-html = "0.1"
tap = "1.0"
fancy-regex = "0.10"

[dev-dependencies]
temptree = "0.2.0"