[package]
name = "pathmarker"
version = "0.1.0"
edition = "2021"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
description = "Marker types used with typed_path"
homepage = "https://github.com/jayson-lennon/pylon"
repository = "https://github.com/jayson-lennon/pylon"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "pathmarker"
path = "src/lib.rs"

[dependencies]
typed_path = { path = "../typed_path" }
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"

[dev-dependencies]
temptree = "0.2.0"
tempfile = "3.3"