[package]
name = "pindexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
eyre = "0.6"
color-eyre = "0.6"
thiserror = "1.0"
serde_json = "1.0"
enumflags2 = "0.7"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }

[dev-dependencies]
temptree = "0.2.0"
tempfile = "3.3"
