[package]
name = "pipeworks"
version = "0.1.0"
edition = "2021"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
description = "Asset processing functionality for Pylon"
homepage = "https://github.com/jayson-lennon/pylon"
repository = "https://github.com/jayson-lennon/pylon"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
typed_path = { path = "../typed_path" }
typed_uri = { path = "../typed_uri" }
pathmarker = { path = "../pathmarker" }

anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
eyre = "0.6"
color-eyre = "0.6"
serde_json = "1.0"
tempfile = "3.3"

[dev-dependencies]
temptree = "0.2.0"
tempfile = "3.3"