[package]
name = "shortcode_processor"
version = "0.1.0"
edition = "2021"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
description = "Shortcode parsing for Pylon"
homepage = "https://github.com/jayson-lennon/pylon"
repository = "https://github.com/jayson-lennon/pylon"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
eyre = "0.6"
color-eyre = "0.6"
fancy-regex = "0.10"
nom = "7.1"
once_cell = "1.10"
serde_json = "1.0"

[dev-dependencies]
temptree = "0.2.0"
tempfile = "3.3"