[package]
name = "typed_uri"
version = "0.1.0"
edition = "2021"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
description = "Type-checked URIs for Pylon"
homepage = "https://github.com/jayson-lennon/pylon"
repository = "https://github.com/jayson-lennon/pylon"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "typed_uri"
path = "src/lib.rs"

[dependencies]
typed_path = { path = "../typed_path" }
pathmarker = { path = "../pathmarker" }
derivative = "2.2"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6"
tracing = "0.1"
color-eyre = "0.6"

[dev-dependencies]
temptree = "0.2.0"
tempfile = "3.3"